--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,12 @@
 [defaults]
 inventory = ./inventory.ini
 host_key_checking = False          # or keep checking and use accept-new below
+log_path = ./ansible-run.log
+stdout_callback = yaml          # readable
+bin_ansible_callbacks = True    # enables callback output like timer/profile
+
+[callback_profile_tasks]
+task_output_limit = 20
 
 [ssh_connection]
 ssh_args = -o StrictHostKeyChecking=accept-new
