--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
 inventory = ./inventory.ini
-host_key_checking = False          # or keep checking and use accept-new below
-log_path = ./ansible-run.log
-stdout_callback = yaml          # readable
-bin_ansible_callbacks = True    # enables callback output like timer/profile
+host_key_checking = False          
+log_path = ansible/.logs/ansible-run.log
+stdout_callback = yaml          
+bin_ansible_callbacks = True    
 
 [callback_profile_tasks]
 task_output_limit = 20
