Ubuntu VMs working, ready to try Ansible

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,28 +1,12 @@
-# Consider having Terraform write to this file to dynamically create the inventory.
+[k3s_servers]
+lab-k8s-1 ansible_host=192.168.50.15
+lab-k8s-2 ansible_host=192.168.50.16
 
+[k3s_agents]
+lab-k8s-3 ansible_host=192.168.50.17
+lab-k8s-4 ansible_host=192.168.50.18
+lab-k8s-5 ansible_host=192.168.50.19
 
-# inventory.ini — static list of LXCs for Ansible
-# Lines starting with # are comments.
-
-# [lxc] defines a host group named "lxc"
-[lxc]
-# <inventory_name> ansible_host=<IP or DNS>
-# inventory_name is how Ansible refers to the host; ansible_host is the actual address.
-lxc-1 ansible_host=192.168.50.15
-lxc-2 ansible_host=192.168.50.16
-lxc-3 ansible_host=192.168.50.17
-lxc-4 ansible_host=192.168.50.18
-lxc-5 ansible_host=192.168.50.19
-# Group-wide defaults for all hosts in [lxc]
-[lxc:vars]
-# You said you'll connect as root on all of them.
-ansible_user=root
-
-# SSH key to use. Omit if you use the default (~/.ssh/id_rsa or id_ed25519).
-ansible_ssh_private_key_file=~/.ssh/id_ed25519
-
-# SSH port. Change if you’ve moved SSH off 22.
-ansible_port=22
-
-# No sudo escalation when using root.
-ansible_become=false
+[k3s:children]
+k3s_servers
+k3s_agents
