--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
+# Setting the default inventory prevents needing to specify inventory.ini in every command
 inventory = ./inventory.ini
 host_key_checking = False          
-log_path = ansible/.logs/ansible-run.log
+log_path = ./.logs/ansible-run.log
 stdout_callback = yaml          
 bin_ansible_callbacks = True    
 
