--- a/k8s/homepage/Deployment.yml
+++ b/k8s/homepage/Deployment.yml
@@ -28,7 +28,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: HOMEPAGE_ALLOWED_HOSTS
-              value: home.theblacklodge.dev # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
+              value: localhost:40767 # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
           ports:
             - name: http
               containerPort: 3000
