--- a/k8s/podinfo/app.yml
+++ b/k8s/podinfo/app.yml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: podinfo
-  namespace: argocd
+  namespace: podinfo
 spec:
   project: default
   destination:
