--- a/k8s/jupyterhub/juypterhub.yml
+++ b/k8s/jupyterhub/juypterhub.yml
@@ -1,21 +1,90 @@
-kind: HTTPRoute
-apiVersion: gateway.networking.k8s.io/v1
+apiVersion: v1
+kind: Namespace
 metadata:
-  name:
+  name: jupyterhub
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: jupyterhub-config
+  namespace: jupyterhub
+data:
+  settings.yaml: |
+    title: The Black Lodge
+    theme: dark
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: jupyterhub
+  namespace: jupyterhub
   labels:
-
-  annotations:
-
+    app: jupyterhub
 spec:
-  parentRefs:
-    - kind: Gateway
-      name: 
-      namespace: juypterhub
-
-  hostnames: hub.theblacklodge.dev
-
+  replicas: 1
+  selector:
+    matchLabels:
+      app: jupyterhub
+  template:
+    metadata:
+      labels:
+        app: jupyterhub
+    spec:
+      volumes:
+        - name: jupyterhub-config
+          emptyDir: {}         # writable dir
+        - name: jupyterhub-settings
+          configMap:
+            name: jupyterhub-config
+            items:
+              - key: settings.yaml
+                path: settings.yaml
+      containers:
+        - name: jupyterhub
+          image: ghcr.io/jupyterhub/jupyterhub:latest
+          env:
+            - name: jupyterhub_ALLOWED_HOSTS
+              value: home.theblacklodge.dev
+            - name: jupyterhub_CONFIG_DIR
+              value: /app/config
+          volumeMounts:
+            - name: jupyterhub-config
+              mountPath: /app/config
+            - name: jupyterhub-settings
+              mountPath: /app/config/settings.yaml
+              subPath: settings.yaml
+          ports:
+            - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jupyterhub
+  namespace: jupyterhub
+spec:
+  selector:
+    app: jupyterhub
+  ports:
+    - port: 80
+      targetPort: 3000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: jupyterhub
+  namespace: jupyterhub
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+spec:
+  ingressClassName: traefik
   rules:
-    - backendRefs:
-        - name: proxy-public
-          port: 80
-
+    - host: hub.theblacklodge.dev
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: jupyterhub
+                port:
+                  number: 80
