--- a/k8s/homepage/homepage.yml
+++ b/k8s/homepage/homepage.yml
@@ -59,8 +59,8 @@ spec:
               mountPath: /app/config/settings.yaml
               subPath: settings.yaml
             - name: homepage-bookmarks
-              mountPath: /app/config/bookmarks.yml
-              subPath: bookmarks.yml
+              mountPath: /app/config/bookmarks.yaml
+              subPath: bookmarks.yaml
           ports:
             - containerPort: 3000
 ---
