--- a/k8s/homepage/homepage.yml
+++ b/k8s/homepage/homepage.yml
@@ -15,20 +15,20 @@ data:
   bookmarks.yaml: |            # ← add this
     - Developer:
         - Github:
-            - abbr: TT
+            - abbr: GH
               href: https://github.com/
-
+    
     - Social:
         - Reddit:
             - icon: reddit.png
               href: https://reddit.com/
               description: The front page of the internet
-
+    
     - Entertainment:
         - YouTube:
             - abbr: YT
               href: https://youtube.com/
-    ---
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
