--- a/k8s/homepage/homepage.yml
+++ b/k8s/homepage/homepage.yml
@@ -14,7 +14,7 @@ data:
     theme: dark
   bookmarks.yaml: |            # ← add this
     - Developer:
-        - Github:
+        - Flappa:
             - abbr: TT
               href: https://github.com/
     
