--- a/k8s/homepage/homepage.yml
+++ b/k8s/homepage/homepage.yml
@@ -55,6 +55,8 @@ spec:
             items:
               - key: settings.yaml
                 path: settings.yaml
+              - key: bookmarks.yaml
+                path: bookmarks.yaml
       containers:
         - name: homepage
           image: ghcr.io/gethomepage/homepage:latest
@@ -69,6 +71,9 @@ spec:
             - name: homepage-settings
               mountPath: /app/config/settings.yaml
               subPath: settings.yaml
+            - name: homepage-bookmarks.yaml
+              mountPath: /app/config/bookmarks.yaml
+              subPath: bookmarks.yaml
           ports:
             - containerPort: 3000
 ---
