--- a/k8s/homepage/homepage.yml
+++ b/k8s/homepage/homepage.yml
@@ -42,19 +42,11 @@ spec:
     matchLabels:
       app: homepage
   template:
-    metadata:
-      labels:
-        app: homepage
     spec:
       volumes:
         - name: homepage-config
-          emptyDir: {}         # writable dir
-        - name: homepage-settings
           configMap:
             name: homepage-config
-            items:
-              - key: settings.yaml
-                path: settings.yaml
       containers:
         - name: homepage
           image: ghcr.io/gethomepage/homepage:latest
@@ -66,9 +58,7 @@ spec:
           volumeMounts:
             - name: homepage-config
               mountPath: /app/config
-            - name: homepage-settings
-              mountPath: /app/config/settings.yaml
-              subPath: settings.yaml
+              readOnly: true
           ports:
             - containerPort: 3000
 ---
