--- a/k8s/homepage/kustomization.yaml
+++ b/k8s/homepage/kustomization.yaml
@@ -13,6 +13,8 @@ configMapGenerator:
     files:
       - settings.yaml
       - bookmarks.yaml
+      - kubernetes.yaml
+      - widgets.yaml
 
 generatorOptions:
   disableNameSuffixHash: false
