demoing argocd and homepage updates

--- a/k8s/homepage/kustomization.yaml
+++ b/k8s/homepage/kustomization.yaml
@@ -15,6 +15,7 @@ configMapGenerator:
       - bookmarks.yaml
       - kubernetes.yaml
       - widgets.yaml
+      - docker.yaml
 
 generatorOptions:
   disableNameSuffixHash: false
