--- a/k8s/homepage/kustomization.yaml
+++ b/k8s/homepage/kustomization.yaml
@@ -5,7 +5,7 @@ namespace: homepage
 resources:
   - namespace.yaml
   - deployment.yaml
-  - service.yaml
+  - services.yaml
   - ingress.yaml
 
 configMapGenerator:
