--- a/k8s/homepage/deployment.yaml
+++ b/k8s/homepage/deployment.yaml
@@ -17,6 +17,8 @@ spec:
           configMap:
             name: homepage-config
         - name: homepage-logs
+          emptyDir: {}
+        - name: homepage-config-dir
           emptyDir: {}        # Kustomize rewrites to hashed name
       containers:
         - name: homepage
@@ -32,5 +34,7 @@ spec:
               readOnly: true         # configs read-only
             - name: homepage-logs
               mountPath: /app/config/logs   # writable
+            - name: homepage-config-dir
+              mountPath: /app/config
           ports:
             - containerPort: 3000
