--- a/k8s/homepage/Service.yaml
+++ b/k8s/homepage/Service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: homepage
-  namespace: homepage
+  namespace: default
   labels:
     app.kubernetes.io/name: homepage
 spec:
