--- a/k8s/homepage/Ingress.yaml
+++ b/k8s/homepage/Ingress.yaml
@@ -11,15 +11,17 @@ metadata:
     gethomepage.dev/group: Cluster Management
     gethomepage.dev/icon: homepage.png
     gethomepage.dev/name: Homepage
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
+  ingressClassName: traefik
   rules:
-    - host: "home.theblacklodge.dev"
+    - host: home.theblacklodge.dev
       http:
         paths:
-          - path: "/"
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: homepage
                 port:
-                  number: 3000
+                  number: 80
