demoing argocd and homepage updates

--- a/k8s/homepage/Ingress.yaml
+++ b/k8s/homepage/Ingress.yaml
@@ -6,11 +6,11 @@ metadata:
   labels:
     app.kubernetes.io/name: homepage
   annotations:
-    gethomepage.dev/description: Dynamically Detected Homepage
-    gethomepage.dev/enabled: "true"
-    gethomepage.dev/group: Cluster Management
-    gethomepage.dev/icon: homepage.png
-    gethomepage.dev/name: Homepage
+    #gethomepage.dev/description: Dynamically Detected Homepage
+    #gethomepage.dev/enabled: "true"
+    #gethomepage.dev/group: Cluster Management
+    #gethomepage.dev/icon: homepage.png
+    #gethomepage.dev/name: Homepage
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
