--- a/k8s/homepage/Service.yaml
+++ b/k8s/homepage/Service.yaml
@@ -3,14 +3,9 @@ kind: Service
 metadata:
   name: homepage
   namespace: default
-  labels:
-    app.kubernetes.io/name: homepage
 spec:
-  type: ClusterIP
-  ports:
-    - port: 3000
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    app.kubernetes.io/name: homepage
+    app: homepage
+  ports:
+    - port: 80
+      targetPort: 3000
