--- a/k8s/homepage/Deployment.yaml
+++ b/k8s/homepage/Deployment.yaml
@@ -19,9 +19,9 @@ spec:
         app.kubernetes.io/name: homepage
     spec:
       serviceAccountName: homepage
-      automountServiceAccountToken: true
-      dnsPolicy: ClusterFirst
-      enableServiceLinks: true
+      #automountServiceAccountToken: true
+      #dnsPolicy: ClusterFirst
+      #enableServiceLinks: true
       containers:
         - name: homepage
           image: "ghcr.io/gethomepage/homepage:latest"
