--- a/k8s/homepage/Service.yaml
+++ b/k8s/homepage/Service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   selector:
-    app: homepage
+    app.kubernetes.io/name: homepage
   ports:
     - port: 80
       targetPort: 3000
