--- a/k8s/homepage/Ingress.yaml
+++ b/k8s/homepage/Ingress.yaml
@@ -2,15 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: homepage
-  namespace: default
-  labels:
-    app.kubernetes.io/name: homepage
+  namespace: homepage
   annotations:
-    #gethomepage.dev/description: Dynamically Detected Homepage
-    #gethomepage.dev/enabled: "true"
-    #gethomepage.dev/group: Cluster Management
-    #gethomepage.dev/icon: homepage.png
-    #gethomepage.dev/name: Homepage
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
