--- a/k8s/homepage/Ingress.yaml
+++ b/k8s/homepage/Ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: homepage
-  namespace: homepage
+  namespace: default
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
