--- a/k8s/homepage/Deployment.yaml
+++ b/k8s/homepage/Deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: HOMEPAGE_ALLOWED_HOSTS
               value: home.theblacklodge.dev # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
           ports:
-            #- name: http
+            - name: http
               containerPort: 3000
               #protocol: TCP
           volumeMounts:
