demoing argocd and homepage updates

--- a/k8s/homepage/ConfigMap.yaml
+++ b/k8s/homepage/ConfigMap.yaml
@@ -16,9 +16,9 @@ data:
   custom.css: ""
   custom.js: ""
   bookmarks.yaml: |
-    - Developer:
+    - DeveloDDper:
         - Github:
-            - abbr: TT
+            - abbr: GH
               href: https://github.com/
   services.yaml: |
     - My First Group:
