--- a/k8s/homepage/ConfigMap.yaml
+++ b/k8s/homepage/ConfigMap.yaml
@@ -16,9 +16,9 @@ data:
   custom.css: ""
   custom.js: ""
   bookmarks.yaml: |
-    - DeveloDDper:
+    - Developer:
         - Github:
-            - abbr: GH
+            - abbr: TT
               href: https://github.com/
   services.yaml: |
     - My First Groups:
