--- a/k8s/homepage/ConfigMap.yaml
+++ b/k8s/homepage/ConfigMap.yaml
@@ -18,7 +18,7 @@ data:
   bookmarks.yaml: |
     - Developer:
         - Github:
-            - abbr: TT
+            - abbr: GH
               href: https://github.com/
   services.yaml: |
     - My First Group:
