--- a/k8s/homepage/Deployment.yaml
+++ b/k8s/homepage/Deployment.yaml
@@ -66,3 +66,5 @@ spec:
             name: homepage
         - name: logs
           emptyDir: {}
+        - name: config-writable
+          emptyDir: {}   
