--- a/k8s/pgadmin4/ConfigMap.yaml
+++ b/k8s/pgadmin4/ConfigMap.yaml
@@ -11,7 +11,7 @@ data:
            "Group": "Servers",
            "Port": 5432,
            "Username": "postgres",
-           "Host": "postgres.theblacklodge.dev",
+           "Host": "pgadmin.theblacklodge.dev",
            "SSLMode": "prefer",
            "MaintenanceDB": "postgres"
          }
