--- a/k8s/homepage/Ingress.yaml
+++ b/k8s/homepage/Ingress.yaml
@@ -7,6 +7,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
+  tls:
+    - hosts: [pgadmin.theblacklodge.dev]
   rules:
     - host: home.theblacklodge.dev
       http:
