demoing argocd and homepage updates

--- a/k8s/pgadmin4/StatefulSet.yaml
+++ b/k8s/pgadmin4/StatefulSet.yaml
@@ -3,7 +3,7 @@ kind: StatefulSet
 metadata:
  name: pgadmin
 spec:
- serviceName: pgadmin-service
+ serviceName: pgadmin
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
