--- a/k8s/pgadmin4/Ingress.yaml
+++ b/k8s/pgadmin4/Ingress.yaml
@@ -15,6 +15,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: pgadmin-service
+                name: pgadmin
                 port:
                   number: 80
