--- a/k8s/argocd/app-n8n.yaml
+++ b/k8s/argocd/app-n8n.yaml
@@ -2,20 +2,29 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: n8n
-  namespace: argocd # Argo CD's install namespace
+  namespace: argocd
 spec:
-  project: default # Argo CD Project (use "default" or define your own)
+  project: default
+
   source:
-    repoURL: https://github.com/8gears/n8n-helm-chart
-    targetRevision: 1.1.0 # branch to track
-    path: charts/n8n # directory in repo with Kubernetes manifests
+    # CHANGE THIS to your GitOps repo where k8s/n8n lives
+    repoURL: https://github.com/austindsmith/homelab-infra
+    targetRevision: main          # or whatever branch you push to
+    path: k8s/n8n                 # directory in *your* repo
+
+    # Optional: if k8s/n8n is a small wrapper Helm chart
+    # and you have custom values in values.yaml or values-n8n.yaml:
+    # helm:
+    #   valueFiles:
+    #     - values.yaml            # or values-n8n.yaml
+
   destination:
-    server: https://kubernetes.default.svc # points to the in-cluster Kubernetes
-    namespace: n8n # namespace in which to deploy this app
+    server: https://kubernetes.default.svc
+    namespace: n8n
+
   syncPolicy:
     automated:
-      prune: true # Prune resources removed from Git
-      selfHeal: true # Self-heal if something changes in cluster
+      prune: true
+      selfHeal: true
     syncOptions:
-      - CreateNamespace=true # Create namespace if it doesn't exist
-
+      - CreateNamespace=true
