--- a/k8s/argocd/app-n8n.yaml
+++ b/k8s/argocd/app-n8n.yaml
@@ -26,7 +26,7 @@ spec:
           type: ClusterIP
           port: 80
 
-        iingress:
+        ingress:
           enabled: true
           className: "traefik"
           annotations:
