--- a/k8s/n8n/Chart.yaml
+++ b/k8s/n8n/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.1.0
 dependencies:
   - name: n8n
     version: 1.1.0
-    repository: "oci://8gears.container-registry.com/library"
+    repository: "oci://8gears.container-registry.com/library" #Note: this came from the install command from ArtifactHub.io
