--- a/k8s/grafana/values.yaml
+++ b/k8s/grafana/values.yaml
@@ -12,9 +12,8 @@ grafana:
       cert-manager.io/cluster-issuer: "letsencrypt-dns"
     hosts:
       - host: grafana.theblacklodge.dev
-        paths:
-          - "/" # chart supports simple list of paths
+        path: /
     tls:
       - hosts:
           - grafana.theblacklodge.dev
-        secretName: grafana-tls
+        secretName: n8n-tls
